objects/FieloSVY__Survey__c.object
<CustomObject>
    <fields>
        <fullName>FieloSVY__Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieloSVY__AttachmentId__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Attachment Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloSVY__Category__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Category</label>
        <referenceTo>FieloEE__Category__c</referenceTo>
        <relationshipLabel>Surveys</relationshipLabel>
        <relationshipName>Surveys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloSVY__Menu__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Specify the menu where the partner is going to be redirected after submitting the survey</inlineHelpText>
        <label>Menu</label>
        <referenceTo>FieloEE__Menu__c</referenceTo>
        <relationshipLabel>Surveys</relationshipLabel>
        <relationshipName>Surveys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloSVY__OneAnswerOnly__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>If you want to enforce that a member submit only one time the Survey</inlineHelpText>
        <label>One Answer Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieloSVY__Pollster__c</fullName>
        <label>Pollster</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Transaction</fullName>
                </value>
                <value>
                    <fullName>Event</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FieloSVY__Respondent__c</fullName>
        <label>Respondent</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Transaction</fullName>
                </value>
                <value>
                    <fullName>Event</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FieloSVY__SurveyDescription__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter a description text that will be shown below the title above the survey</inlineHelpText>
        <label>Survey Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>FieloSVY__Title__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter a title that will be displayed above the description text, on top of the survey</inlineHelpText>
        <label>Title</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Survey</label>
    <listViews>
        <fullName>FieloSVY__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Survey Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Surveys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>